# eerie

./: .env.example  Cargo.toml  Procfile  README.md
src/: config.rs  dissect.rs  main.rs  models.rs
src/commands/: eval.rs  mod.rs  parseargs.rs  ping.rs  prefix.rs
src/commands/todo/: add.rs  list.rs  mod.rs  remove.rs
