[package]
name = "eerie"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
dotenv = "*"
mongodb = "2.1"
serde = "1"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
version = "0.11"
features = ["client", "gateway", "rustls_backend", "model"]
